<resources>
    <string name="app_name">Rectangle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_left_y">Top left Y</string>
    <string name="top_left_x">Top left X</string>
    <string name="second_rectangle_coordinates">Second rectangle coordinates</string>
    <string name="first_rectangle_coordinates">First rectangle coordinates</string>
    <string name="generate_rectangles">Generate rectangles</string>
    <string name="example">Example coordinates</string>
    <string name="exampleFist">First \nT.L-X = 0 ___ T.L-Y = 0 \nR.B-X = 100 ___ R.B-Y = 100 \nSecond \nT.L-X = 50 ___ T.L-Y = 50 \nR.B-X = 150 ___ R.B-Y = 150</string>
    <string name="right_bottom_x">Right bottom X</string>
    <string name="right_bottom_y">Right bottom Y</string>
    <string name="error_x_x_less">L.X must be less B.X</string>
    <string name="error_x_x_more">B.X must be more than L.X</string>
    <string name="error_y_y_less">L.Y must be less B.Y</string>
    <string name="error_y_y_more">B.Y must be more than L.Y</string>

    <string name="error_x_x_equal">L.X must not be equal B.X</string>
    <string name="error_y_y_equal">L.Y must not be equal B.Y</string>


</resources>